# multiplex-virtual-staining

./: .gitignore  README.md  pyproject.toml
configs/: train_deepliif.yaml  train_jit.yaml  train_jit_ablations.yaml
scripts/: generate_qualitative_comparison.py  train_jit.py
slurm/: train_jit.sbatch  train_jit_multigpu.sbatch
src/multiplex/evaluation/: __init__.py  fid.py  latex_export.py  metrics.py  statistics.py  visualizer.py
src/multiplex/evaluation/ablations/: __init__.py  ablation_config.py  ablation_report.py  ablation_runner.py
src/multiplex/evaluation/baselines/: __init__.py  cut.py  cyclegan.py  nicegan.py  pix2pix.py  reggan.py  registry.py  spade.py
src/multiplex/evaluation/biological/: __init__.py  biovalidity.py  cell_metrics.py  coexpression.py  morphology.py  segmentation.py  validation_report.py
src/multiplex/models/: __init__.py  attention.py  cross_marker.py  cross_stain_attention.py  decoder.py  discriminator.py  encoder.py  factory.py  generator.py  marker_gnn.py  multi_stain_encoder.py  v3_generator.py
src/multiplex/models/jit/: __init__.py  attention.py  blocks.py  conditional_jit.py  decoder.py  embeddings.py  source_encoder.py
src/multiplex/training/: __init__.py  bio_losses.py  biological_constraints.py  checkpoint.py  config.py  curriculum.py  ema.py  flow_matching.py  gradient_monitor.py  jit_trainer.py  losses.py  patchnce.py  perceptual.py  trainer.py  uncertainty.py  uncertainty_weighting.py
